trace-admin-store: model, migration, repository etc (back)
